Add middleware with JWT check
